--- a/main.html
+++ b/main.html
@@ -10,7 +10,43 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<form method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" placeholder="Name" required>
 
+	<label for="email">Email</label>
+	<input type="email" id="email" placeholder="Email" required>
+
+	<label for="gender_m">Male</label>
+	<input type="radio" id="gender_m" name="gender" required>
+	<label for="gender_f">female</label>
+	<input type="radio" id="gender_f" name="gender" required>
+
+	<label for="cars">Car Brands</label>
+	<select id="cars" required>
+		<option>--Please choose an option--</option>
+		<option>BMW</option>
+		<option>Audi</option>
+		<option>Mercedez</option>
+	</select>
+
+	<label for="age">Age</label>
+	<input type="number" id="age" placeholder="Age" required>
+
+	<label for="dob">DOB</label>
+	<input type="date" id="dob" required>
+
+	<label for="tel">Phone Number</label>
+	<input type="number" id="tel" placeholder="xxx-xxx-xxxx" required>
+
+	<label for="password">Password</label>
+	<input type="password" id="password" placeholder="Password" required>
+
+	<input type="checkbox" id="tos" required>
+	<label for="tos">I agree to the TOS</label>
+
+	<button type="submit">submit button</button>
+</form>
 </body>
 
 </html>
